--- a/vignettes/dp-covariance.Rmd
+++ b/vignettes/dp-covariance.Rmd
@@ -37,7 +37,7 @@ The user must manually specify the number of observations, variable type, and ra
 Syntax
 ------
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 # import the library
 library(PSIlence)
 
@@ -49,7 +49,7 @@ data <- data.frame(x1, x2)
 # range of the example data
 # we do this here to make the ranges easier to pass into the call to dpCovariance
 range1 <- c(0,70)
-range2 <- c(0,1)
+range2 <- c(0,100)
 ranges <- do.call(rbind, list(range1, range2))
 
 dpCovarianceExample <- dpCovariance$new(mechanism='mechanismLaplace', varType='numeric',
@@ -71,7 +71,7 @@ The `new` method creates an object of the class, and accepts the following argum
 
 * `n` \ Integer, the number of observations in the columns.
 
-* `epsilon` \ Numeric, the differential privacy parameter $\epsilon$, typically taking values between 0 and 1 and reflecting the privacy cost of the query.
+* `epsilon` \ Numeric, the differential privacy parameter $\epsilon$, typically taking values between 0 and 1 and reflecting the privacy cost of the query. The vector of epsilons match up with the induced covariance matrix by proceeding top-to-bottom down each column of the lower triangular matrix.
 
 * `columns` \ Character, the columns of the data to include in the output covariance matrix
 
@@ -120,16 +120,17 @@ data(PUMS5extract10000)
 
 To calculate a private covariance matrix of a set of numeric vectors with `dpCovariance`, enter the mechanism (this will be the Laplace Mechanism, or 'mechanismLaplace'), the variable type ('numeric'), the columns of interest (the column names of the variables of interest in the dataframe), the number of observations in the dataframe, the epsilon value (generally less than 1), and the matrix of ranges of the chosen columns:
 
-```{r, eval=FALSE}
+```{r, eval = TRUE}
 # before calculating the covariance, create a matrix of the column ranges,
 # where each row contains the minimum and maximum value of a column,
 # in the order of the columns as they are passed into the dpCovariance call
 income_range = c(0, 750000)
 education_range = c(1,16)
-column_ranges_matrix <- matrix(c(income_range, education_range), nrow=2, ncol=2, byrow=TRUE)
+age_range = c(0,120)
+column_ranges_matrix <- matrix(c(income_range, education_range, age_range), nrow=3, ncol=2, byrow=TRUE)
 
 numeric_covariance <- dpCovariance$new(mechanism='mechanismLaplace', varType='numeric',
-                           columns=c('income', 'educ'), n=10000, epsilon=c(0.1,0.1,0.1), rng=column_ranges_matrix)
+                           columns=c('income', 'educ', 'age'), n=10000, epsilon=c(0.1,0.1,0.1,0.1,0.1,0.1), rng=column_ranges_matrix)
 numeric_covariance$release(PUMS5extract10000)
 print(numeric_covariance$result)
 ```
