--- a/vignettes/snapping-mechanism.Rmd
+++ b/vignettes/snapping-mechanism.Rmd
@@ -98,7 +98,7 @@ dp.variance$release(PUMS5extract10000)
 print(dp.variance$result)
 
 # release covariance of sex and marriage
-ranges <- do.call(rbind, list(c(0,1), c(0,1)))
+ranges <- list(c(0,1), c(0,1))
 dp.covariance <- dpCovariance$new(mechanism = 'mechanismSnapping', varType = 'logical',
                                  n = nrow(PUMS5extract10000), globalEps = 1,
                                  columns = c('sex', 'married'), rng = ranges)
