Change parameter name to coefVal so it is not confused with function coef

--- a/vignettes/dp-histogram.Rmd
+++ b/vignettes/dp-histogram.Rmd
@@ -4,7 +4,7 @@ author: "Megan Fantes"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{dp-covariance}
+  %\VignetteIndexEntry{dp-histogram}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
